# seco

./: .gitignore  Cargo.toml  LICENSE  Shuttle.toml
.cargo/: config.toml
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240327_124407_add_users_first_name_last_name.rs  m20240327_130532_delete_users_name.rs  m20240327_131345_index_users_more_fields.rs  m20240328_042743_products.rs  m20240328_095301_delete_notes.rs  m20240329_041116_product_images.rs  m20240329_164332_add_users_is_active_is_superuser.rs  m20240828_113705_categories.rs  m20240830_142527_alter_parent_id_categories.rs  m20240903_112445_alter_products_category.rs  m20240909_030131_add_users_location_and_image.rs  m20240909_031109_index_users_location.rs  m20240909_031322_index_products_brand.rs  m20240909_112205_wishlists.rs  m20240912_033907_offerings.rs  m20240916_093433_add_users_lat_and_long.rs  m20240916_093824_add_offerings_firebase_id.rs  m20240918_124826_alter_offerings_product_condition.rs  m20240926_135258_alter_offerings_action_type_enum.rs
src/: app.rs
src/controllers/: auth.rs  base.rs  categories.rs  mod.rs  offering.rs  products.rs  upload.rs  user.rs  wishlists.rs
src/fixtures/: categories.yaml  users.yaml
src/mailers/: auth.rs
src/models/: categories.rs  mod.rs  offerings.rs  product_images.rs  products.rs  users.rs  wishlists.rs
src/tasks/: seed.rs
src/views/: auth.rs  base.rs  category.rs  mod.rs  offering.rs  product.rs  product_image.rs  upload.rs  user.rs  wishlist.rs
tests/models/: categories.rs  mod.rs  product_images.rs  products.rs  users.rs
tests/requests/: auth.rs  base.rs  categories.rs  mod.rs  offering.rs  prepare_data.rs  products.rs  user.rs  (+1 more)
(+13 files in other folders)
