[workspace]

[package]
name = "seco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-axum = "0.47.0"
shuttle-metadata = "0.42.0"
shuttle-runtime = { version = "0.47.0", default-features = false }
shuttle-shared-db = { version = "0.47.0", features = ["postgres"] }


loco-rs = { version = "0.6.1" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = { version = "0.7.5", features = ["multipart"] }
axum_session = { version = "0.14.0", default-features = false }

include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }

# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
# /view engine

[[bin]]
name = "seco-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "seco"
path = "src/bin/shuttle.rs"

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { version = "0.6.1", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
axum-test = { version = "14.3.0" }